fix: fix overflow-x for long usernames for friend records, messages, friend profile and notifications

--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -172,3 +172,8 @@ a:active {
 .input-field::placeholder {
   color: var(--charcoal-300);
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
