--- a/frontend/src/css/menu/friend_profile.css
+++ b/frontend/src/css/menu/friend_profile.css
@@ -1,7 +1,8 @@
 .profile-container {
-  padding-top: 3rem;
   width: 13rem;
   height: 100%;
+  padding: 3rem 1rem 3rem 1rem;
+  overflow: hidden;
   border-radius: 1rem;
   background-color: var(--charcoal-800);
   box-sizing: border-box;
@@ -13,6 +14,7 @@
 .profile-container > .avatar-section {
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
   font-size: 1.5rem;
   gap: 0.5rem;
@@ -36,8 +38,7 @@
   width: 1.5rem;
   height: 1.5rem;
   position: absolute;
-  bottom: 0.05rem;
-  right: 3.75rem;
+  right: 2.75rem;
   border-width: 0.2rem;
 }
 
@@ -77,3 +78,10 @@
   min-width: 10rem;
 }
  
+.profile-container .username {
+  overflow-x: scroll;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  box-sizing: border-box;
+}
