--- a/frontend/src/css/menu/main_menu_panel.css
+++ b/frontend/src/css/menu/main_menu_panel.css
@@ -58,7 +58,6 @@
 .notification {
   display: flex;
   align-items: center;
-  justify-content: center;
   width: 0rem;
   height: 2.5rem;
   border-radius: 0.75rem;
